--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -274,7 +274,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/logo.png") center left no-repeat;
+  background: url("../img/logo.png") center center no-repeat;
   background-size: cover;
   /* background-position: top right; */
   position: relative;
