--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -286,7 +286,7 @@ h6 {
   }
 }
 
-#hero:before {
+/* #hero:before {
   content: "";
   background: rgba(255, 255, 255, 0.8);
   position: absolute;
@@ -294,7 +294,7 @@ h6 {
   top: 0;
   left: 0;
   right: 0;
-}
+} */
 
 #hero h1 {
   margin: 0;
