--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -278,6 +278,8 @@ h6 {
   background-size: cover;
   /* background-position: top right; */
   position: relative;
+  /* z-index: 2; */
+
 }
 
 @media (min-width: 992px) {
@@ -286,7 +288,7 @@ h6 {
   }
 }
 
-/* #hero:before {
+#hero:before {
   content: "";
   background: rgba(255, 255, 255, 0.8);
   position: absolute;
@@ -294,7 +296,8 @@ h6 {
   top: 0;
   left: 0;
   right: 0;
-} */
+  z-index: 1;
+}
 
 #hero h1 {
   margin: 0;
